# OpenCV-Learning

./: README.md
homework_week2_1/: CMakeLists.txt  main.cpp
homework_week2_2/: CMakeLists.txt  main.cpp
startercode.0/: getting_started_with_images.ipynb  getting_started_with_images_old.ipynb
week1-cpp/Bitwise_Operations/: CMakeLists.txt  Example.cpp  test.cpp
week1-cpp/Getting_started_with_images/: CMakeLists.txt  Color_Images.cpp  Image_with_alpha_channel.cpp  Manipulating_Pixels.cpp  Manipulating_group_of_pixels.cpp  test.cpp  test2.cpp
week1-cpp/Image_Annotation/: CMakeLists.txt  Drawing_Ellipse.cpp  Drawing_Rectangles.cpp  Drawing_Text.cpp  test.cpp
week2-cpp/: VideoRead.cpp  VideoWrite.cpp  using_the_keyboard_as_input_device.cpp  using_the_mouse_for_annotation.cpp
week3-cpp/: CMakeLists.txt  blobDetection.cpp  connectedComponentAnalysis.cpp  implementationOfMorphologicalOperations.cpp  openingClosing.cpp  test.cpp
week4-cpp/: test.cpp  test.h
week4-cpp/ColorSpaces/: CMakeLists.txt  test.cpp  test.h
week4-cpp/ImageGradients/: CMakeLists.txt  canny.cpp  test.cpp  test2.cpp
week5_cpp/: CMakeLists.txt  faceBlending.cpp  hdr.cpp  houghTransform.cpp  imageInpainting.cpp  test.cpp  test2.cpp
week6_cpp/Project1.2/: submission.cpp
week6_cpp/Project1.3/: CMakeLists.txt  submission.cpp
